// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Figure Editor Node Figure component 1`] = `
<div
  className="obojobo-draft--chunks--figure viewer mockSize"
>
  <div
    className="container"
  >
    <div
      className="figure-box  is-not-selected"
      onClick={[Function]}
    >
      <div
        className="obojobo-draft--components--button is-not-dangerous align-center delete-button"
      >
        <button
          onClick={[Function]}
        >
          ×
        </button>
      </div>
      <div
        className="image-toolbar"
      >
        <div
          className="obojobo-draft--components--button is-not-dangerous align-center upload-button"
        >
          <button>
            Upload Image
          </button>
        </div>
        <div
          className="obojobo-draft--components--button is-not-dangerous align-center properties-button"
        >
          <button
            onClick={[Function]}
          >
            Image Properties
          </button>
        </div>
      </div>
      <img
        alt="mockAlt"
        src="mockUrl"
        title="mockAlt"
        unselectable="on"
      />
    </div>
    <figcaption />
  </div>
</div>
`;

exports[`Figure Editor Node Figure renders with custom size correctly 1`] = `
<div
  className="obojobo-draft--chunks--figure viewer custom"
>
  <div
    className="container"
  >
    <div
      className="figure-box  is-not-selected"
      onClick={[Function]}
    >
      <div
        className="obojobo-draft--components--button is-not-dangerous align-center delete-button"
      >
        <button
          onClick={[Function]}
        >
          ×
        </button>
      </div>
      <div
        className="image-toolbar"
      >
        <div
          className="obojobo-draft--components--button is-not-dangerous align-center upload-button"
        >
          <button>
            Upload Image
          </button>
        </div>
        <div
          className="obojobo-draft--components--button is-not-dangerous align-center properties-button"
        >
          <button
            onClick={[Function]}
          >
            Image Properties
          </button>
        </div>
      </div>
      <img
        alt="mockAlt"
        src="mockUrl"
        style={
          Object {
            "height": "customHeightpx",
            "width": "customWidthpx",
          }
        }
        title="mockAlt"
        unselectable="on"
      />
    </div>
    <figcaption />
  </div>
</div>
`;

exports[`Figure Editor Node Figure renders with custom size correctly 2`] = `
<div
  className="obojobo-draft--chunks--figure viewer custom"
>
  <div
    className="container"
  >
    <div
      className="figure-box  is-not-selected"
      onClick={[Function]}
    >
      <div
        className="obojobo-draft--components--button is-not-dangerous align-center delete-button"
      >
        <button
          onClick={[Function]}
        >
          ×
        </button>
      </div>
      <div
        className="image-toolbar"
      >
        <div
          className="obojobo-draft--components--button is-not-dangerous align-center upload-button"
        >
          <button>
            Upload Image
          </button>
        </div>
        <div
          className="obojobo-draft--components--button is-not-dangerous align-center properties-button"
        >
          <button
            onClick={[Function]}
          >
            Image Properties
          </button>
        </div>
      </div>
      <img
        alt="mockAlt"
        src="mockUrl"
        style={
          Object {
            "height": "customHeightpx",
          }
        }
        title="mockAlt"
        unselectable="on"
      />
    </div>
    <figcaption />
  </div>
</div>
`;

exports[`Figure Editor Node Figure renders with custom size correctly 3`] = `
<div
  className="obojobo-draft--chunks--figure viewer custom"
>
  <div
    className="container"
  >
    <div
      className="figure-box  is-not-selected"
      onClick={[Function]}
    >
      <div
        className="obojobo-draft--components--button is-not-dangerous align-center delete-button"
      >
        <button
          onClick={[Function]}
        >
          ×
        </button>
      </div>
      <div
        className="image-toolbar"
      >
        <div
          className="obojobo-draft--components--button is-not-dangerous align-center upload-button"
        >
          <button>
            Upload Image
          </button>
        </div>
        <div
          className="obojobo-draft--components--button is-not-dangerous align-center properties-button"
        >
          <button
            onClick={[Function]}
          >
            Image Properties
          </button>
        </div>
      </div>
      <img
        alt="mockAlt"
        src="mockUrl"
        style={
          Object {
            "width": "mockWidthpx",
          }
        }
        title="mockAlt"
        unselectable="on"
      />
    </div>
    <figcaption />
  </div>
</div>
`;
